@@ -24,7 +24,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.14
+Release: 0.15
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -577,6 +577,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Wed Apr  5 2006 Jeff Johnson <jbj@jbj.org> 4.4.6-0.15
+- refactoring to integrate erasure ordering.
+
 * Tue Apr  4 2006 Jeff Johnson <jbj@jbj.org> 4.4.6-0.14
 - add macros to parameterize rpmds probe dependency defaults.
 - tsort for erased packages (#89500).
