@@ -27,6 +27,7 @@
 	- eliminate SOURCEPACKAGE tag, use non-existence of SOURCERPM instead.
 	- add macros to parameterize rpmds probe dependency defaults.
 	- tsort for erased packages (#89500).
+	- refactoring to integrate erasure ordering.
 
 4.4.4 -> 4.4.5:
 	- nolibio: reopen FD_t to insure attached FILE * reading manifests.
